@@ -75,7 +75,7 @@ public class CreateAccommodationUseCase {
         var unit = createUnitUseCase.createUnitV2(accommodationId, req.getUnit(), images);
 
         // chose the first image as primary
-        var firstImage = unit.getImages().get(0).getUrl();
+        var firstImage = unit.getImages().getFirst().getUrl();
         accommodation.setThumbnailUrl(firstImage);
 
         handleAfterCreateAccommodation(accommodationId);
@@ -84,6 +84,7 @@ public class CreateAccommodationUseCase {
         cachePort.deleteFromCache(CacheUtils.buildCacheKeyGetAccommodations(AccommodationParams.builder()
                         .hostId(userId)
                 .build()));
+        cachePort.deleteFromCache(CacheUtils.buildCacheKeyGetAccommodationById(accommodationId));
 
         return accommodationPort.save(accommodation);
     }
